fix: Mino - added: validator
