# app/internal/model/wraper.go
@@ -1,0 +1,19 @@
+package model
+
+
+
+
+
+
+type DownloadSuccessResponse struct {
+    SuccessResponses[DownloadResponse]
+}
+
+type UserSuccessResponse struct {
+    SuccessResponses[UserResponse]
+}
+
+type MessageSuccessResponse struct {
+    SuccessResponses[string]
+}
+
